src/core/antlr4/VisLangParser.java
// Generated from java-escape by ANTLR 4.11.1
package core.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class VisLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Lparen=1, Rparen=2, Lbrace=3, Rbrace=4, Comma=5, Colon=6, Semicolon=7, 
		Not=8, Mul=9, Div=10, Mod=11, Add=12, Sub=13, Langle=14, Rangle=15, Leq=16, 
		Req=17, Eqeq=18, Neq=19, Assign=20, Add_Assign=21, Sub_Assign=22, Mul_Assign=23, 
		Div_Assign=24, Mod_Assign=25, Fun=26, If=27, Else=28, For=29, Do=30, While=31, 
		Print=32, Println=33, Return=34, In=35, And=36, Or=37, Null=38, Boolean=39, 
		String=40, Integer=41, Double=42, Comment=43, Identifier=44, Whitespace=45;
	public static final int
		RULE_program = 0, RULE_body = 1, RULE_declaration = 2, RULE_funDecl = 3, 
		RULE_params = 4, RULE_statement = 5, RULE_ifStat = 6, RULE_simpleIf = 7, 
		RULE_complexIf = 8, RULE_doWhileStat = 9, RULE_whileStat = 10, RULE_forStat = 11, 
		RULE_callStat = 12, RULE_printCall = 13, RULE_funCall = 14, RULE_block = 15, 
		RULE_expr = 16, RULE_assignment = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "body", "declaration", "funDecl", "params", "statement", "ifStat", 
			"simpleIf", "complexIf", "doWhileStat", "whileStat", "forStat", "callStat", 
			"printCall", "funCall", "block", "expr", "assignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "','", "':'", "';'", "'!'", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'fun'", "'if'", "'else'", 
			"'for'", "'do'", "'while'", "'print'", "'println'", "'return'", "'in'", 
			"'and'", "'or'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Lparen", "Rparen", "Lbrace", "Rbrace", "Comma", "Colon", "Semicolon", 
			"Not", "Mul", "Div", "Mod", "Add", "Sub", "Langle", "Rangle", "Leq", 
			"Req", "Eqeq", "Neq", "Assign", "Add_Assign", "Sub_Assign", "Mul_Assign", 
			"Div_Assign", "Mod_Assign", "Fun", "If", "Else", "For", "Do", "While", 
			"Print", "Println", "Return", "In", "And", "Or", "Null", "Boolean", "String", 
			"Integer", "Double", "Comment", "Identifier", "Whitespace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VisLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VisLangParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			body();
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Semicolon() { return getTokens(VisLangParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(VisLangParser.Semicolon, i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(44);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(39);
					statement();
					}
					break;
				case 2:
					{
					setState(40);
					declaration();
					}
					break;
				case 3:
					{
					setState(41);
					expr(0);
					setState(42);
					match(Semicolon);
					}
					break;
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 26147425362178L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			funDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDeclContext extends ParserRuleContext {
		public TerminalNode Fun() { return getToken(VisLangParser.Fun, 0); }
		public TerminalNode Identifier() { return getToken(VisLangParser.Identifier, 0); }
		public TerminalNode Lparen() { return getToken(VisLangParser.Lparen, 0); }
		public TerminalNode Rparen() { return getToken(VisLangParser.Rparen, 0); }
		public TerminalNode Lbrace() { return getToken(VisLangParser.Lbrace, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(VisLangParser.Rbrace, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitFunDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Fun);
			setState(51);
			match(Identifier);
			setState(52);
			match(Lparen);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 26130581037314L) != 0) {
				{
				setState(53);
				params();
				}
			}

			setState(56);
			match(Rparen);
			setState(57);
			match(Lbrace);
			setState(58);
			block();
			setState(59);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(VisLangParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(VisLangParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(VisLangParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(VisLangParser.Comma, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		try {
			int _alt;
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(Identifier);
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(62);
						match(Comma);
						setState(63);
						match(Identifier);
						}
						} 
					}
					setState(68);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				expr(0);
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(70);
						match(Comma);
						setState(71);
						expr(0);
						}
						} 
					}
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(VisLangParser.Semicolon, 0); }
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public DoWhileStatContext doWhileStat() {
			return getRuleContext(DoWhileStatContext.class,0);
		}
		public WhileStatContext whileStat() {
			return getRuleContext(WhileStatContext.class,0);
		}
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public CallStatContext callStat() {
			return getRuleContext(CallStatContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				assignment();
				setState(80);
				match(Semicolon);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				ifStat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				doWhileStat();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				whileStat();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				forStat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(86);
				callStat();
				setState(87);
				match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatContext extends ParserRuleContext {
		public SimpleIfContext simpleIf() {
			return getRuleContext(SimpleIfContext.class,0);
		}
		public ComplexIfContext complexIf() {
			return getRuleContext(ComplexIfContext.class,0);
		}
		public IfStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatContext ifStat() throws RecognitionException {
		IfStatContext _localctx = new IfStatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStat);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				simpleIf();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				complexIf();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleIfContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(VisLangParser.If, 0); }
		public TerminalNode Lparen() { return getToken(VisLangParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(VisLangParser.Rparen, 0); }
		public List<TerminalNode> Lbrace() { return getTokens(VisLangParser.Lbrace); }
		public TerminalNode Lbrace(int i) {
			return getToken(VisLangParser.Lbrace, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> Rbrace() { return getTokens(VisLangParser.Rbrace); }
		public TerminalNode Rbrace(int i) {
			return getToken(VisLangParser.Rbrace, i);
		}
		public TerminalNode Else() { return getToken(VisLangParser.Else, 0); }
		public SimpleIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitSimpleIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleIfContext simpleIf() throws RecognitionException {
		SimpleIfContext _localctx = new SimpleIfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(If);
			setState(96);
			match(Lparen);
			setState(97);
			expr(0);
			setState(98);
			match(Rparen);
			setState(99);
			match(Lbrace);
			setState(100);
			block();
			setState(101);
			match(Rbrace);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(102);
				match(Else);
				setState(103);
				match(Lbrace);
				setState(104);
				block();
				setState(105);
				match(Rbrace);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComplexIfContext extends ParserRuleContext {
		public List<TerminalNode> If() { return getTokens(VisLangParser.If); }
		public TerminalNode If(int i) {
			return getToken(VisLangParser.If, i);
		}
		public List<TerminalNode> Lparen() { return getTokens(VisLangParser.Lparen); }
		public TerminalNode Lparen(int i) {
			return getToken(VisLangParser.Lparen, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Rparen() { return getTokens(VisLangParser.Rparen); }
		public TerminalNode Rparen(int i) {
			return getToken(VisLangParser.Rparen, i);
		}
		public List<TerminalNode> Lbrace() { return getTokens(VisLangParser.Lbrace); }
		public TerminalNode Lbrace(int i) {
			return getToken(VisLangParser.Lbrace, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> Rbrace() { return getTokens(VisLangParser.Rbrace); }
		public TerminalNode Rbrace(int i) {
			return getToken(VisLangParser.Rbrace, i);
		}
		public List<TerminalNode> Else() { return getTokens(VisLangParser.Else); }
		public TerminalNode Else(int i) {
			return getToken(VisLangParser.Else, i);
		}
		public ComplexIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitComplexIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexIfContext complexIf() throws RecognitionException {
		ComplexIfContext _localctx = new ComplexIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_complexIf);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(If);
			setState(110);
			match(Lparen);
			setState(111);
			expr(0);
			setState(112);
			match(Rparen);
			setState(113);
			match(Lbrace);
			setState(114);
			block();
			setState(115);
			match(Rbrace);
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(116);
					match(Else);
					setState(117);
					match(If);
					setState(118);
					match(Lparen);
					setState(119);
					expr(0);
					setState(120);
					match(Rparen);
					setState(121);
					match(Lbrace);
					setState(122);
					block();
					setState(123);
					match(Rbrace);
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(130);
				match(Else);
				setState(131);
				match(Lbrace);
				setState(132);
				block();
				setState(133);
				match(Rbrace);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoWhileStatContext extends ParserRuleContext {
		public TerminalNode Do() { return getToken(VisLangParser.Do, 0); }
		public TerminalNode Lbrace() { return getToken(VisLangParser.Lbrace, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(VisLangParser.Rbrace, 0); }
		public TerminalNode While() { return getToken(VisLangParser.While, 0); }
		public TerminalNode Lparen() { return getToken(VisLangParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(VisLangParser.Rparen, 0); }
		public TerminalNode Semicolon() { return getToken(VisLangParser.Semicolon, 0); }
		public DoWhileStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doWhileStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitDoWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoWhileStatContext doWhileStat() throws RecognitionException {
		DoWhileStatContext _localctx = new DoWhileStatContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_doWhileStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(Do);
			setState(138);
			match(Lbrace);
			setState(139);
			block();
			setState(140);
			match(Rbrace);
			setState(141);
			match(While);
			setState(142);
			match(Lparen);
			setState(143);
			expr(0);
			setState(144);
			match(Rparen);
			setState(145);
			match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(VisLangParser.While, 0); }
		public TerminalNode Lparen() { return getToken(VisLangParser.Lparen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(VisLangParser.Rparen, 0); }
		public TerminalNode Lbrace() { return getToken(VisLangParser.Lbrace, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(VisLangParser.Rbrace, 0); }
		public WhileStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatContext whileStat() throws RecognitionException {
		WhileStatContext _localctx = new WhileStatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(While);
			setState(148);
			match(Lparen);
			setState(149);
			expr(0);
			setState(150);
			match(Rparen);
			setState(151);
			match(Lbrace);
			setState(152);
			block();
			setState(153);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatContext extends ParserRuleContext {
		public TerminalNode For() { return getToken(VisLangParser.For, 0); }
		public TerminalNode Lparen() { return getToken(VisLangParser.Lparen, 0); }
		public TerminalNode In() { return getToken(VisLangParser.In, 0); }
		public TerminalNode Rparen() { return getToken(VisLangParser.Rparen, 0); }
		public TerminalNode Lbrace() { return getToken(VisLangParser.Lbrace, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(VisLangParser.Rbrace, 0); }
		public List<TerminalNode> Identifier() { return getTokens(VisLangParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(VisLangParser.Identifier, i);
		}
		public List<TerminalNode> Integer() { return getTokens(VisLangParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(VisLangParser.Integer, i);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ForStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VisLangVisitor ) return ((VisLangVisitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}
